--- a/WPF/MainWindow.xaml
+++ b/WPF/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:local="clr-namespace:WPF" 
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         xmlns:oglc="clr-namespace:WPFOpenGLLib;assembly=OpenGLManagedCpp" 
-        xmlns:se="clr-namespace:SimpleEngineControls;assembly=SimpleEngineControls" 
+        xmlns:se="clr-namespace:SimpleEngineTileEditor;assembly=SimpleEngineTileEditor" 
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit" 
         x:Class="WPF.MainWindow" 
