+Minor ui fixes

--- a/WPF/PropertyWindowControl.xaml
+++ b/WPF/PropertyWindowControl.xaml
@@ -19,14 +19,14 @@
                 <DataGridTemplateColumn Header="Name" Width="SizeToCells">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBox Text="{Binding Name}" />
+                            <TextBox Text="{Binding Name}" IsReadOnly="true" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
                 <DataGridTemplateColumn Header="Z" Width="SizeToCells">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBox Text="{Binding Z}" />
+                            <TextBox Text="{Binding Z}" IsReadOnly="True"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
