--- a/WPF/PropertyWindowControl.xaml
+++ b/WPF/PropertyWindowControl.xaml
@@ -49,7 +49,8 @@
         <Separator Margin="0,20,0,20"/>
         <Label Content="Images" />
         <ScrollViewer>
-            <DataGrid ItemsSource="{Binding Tiles}" AutoGenerateColumns="False" SelectedItem="{Binding Row, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" ScrollViewer.CanContentScroll="true" ScrollViewer.VerticalScrollBarVisibility="Visible" Height="400">
+            <DataGrid ItemsSource="{Binding Tiles}" AutoGenerateColumns="False" SelectedItem="{Binding Row, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+                      ScrollViewer.CanContentScroll="true" ScrollViewer.VerticalScrollBarVisibility="Visible" Height="400" SelectionChanged="TileGrid_SelectionChanged">
                 <DataGrid.Columns>
                     <DataGridTemplateColumn Header="Image" Width="SizeToCells">
                         <DataGridTemplateColumn.CellTemplate>
