--- a/WPF/AnimationEditor.xaml
+++ b/WPF/AnimationEditor.xaml
@@ -4,9 +4,17 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WPF"
+             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <Image Source="{Binding CurrentTile.Image}" Style="{StaticResource MidImage}" />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <Slider Grid.Row="0" Maximum="100" TickPlacement="BottomRight" TickFrequency="5" ValueChanged="FrequencySlider_ValueChanged"/>
+        <Image Grid.Row="1" Source="{Binding CurrentTile.Image}" Style="{StaticResource MidImage}"/>
+        <Button Grid.Row="2" Content="Save" Style="{StaticResource Button}"></Button>
     </Grid>
 </UserControl>
