--- a/WPF/AnimationEditor.xaml
+++ b/WPF/AnimationEditor.xaml
@@ -10,11 +10,16 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <Slider Grid.Row="0" Maximum="100" TickPlacement="BottomRight" TickFrequency="5" ValueChanged="FrequencySlider_ValueChanged"/>
-        <Image Grid.Row="1" Source="{Binding CurrentTile.Image}" Style="{StaticResource MidImage}"/>
-        <Button Grid.Row="2" Content="Save" Style="{StaticResource Button}"></Button>
+        <Label Content="Animation Name:" Grid.Row="0"></Label>
+        <TextBox Text="{Binding Name}" Grid.Row="1"></TextBox>
+        <Slider Grid.Row="2" Maximum="100" TickPlacement="BottomRight" TickFrequency="5" ValueChanged="FrequencySlider_ValueChanged"/>
+        <Image Grid.Row="3" Source="{Binding CurrentTile.Image}" Style="{StaticResource MidImage}"/>
+        <Button Grid.Row="4" Content="Save" Style="{StaticResource Button}"></Button>
     </Grid>
 </UserControl>
