integrate color and font type to interop

--- a/WPF/FontEditor.xaml
+++ b/WPF/FontEditor.xaml
@@ -8,7 +8,7 @@
              xmlns:ComponentModel="clr-namespace:System.ComponentModel;assembly=WindowsBase"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit" 
              mc:Ignorable="d" 
-             d:DesignHeight="150" d:DesignWidth="180">
+             d:DesignHeight="250" d:DesignWidth="180">
     <UserControl.Resources>
         <CollectionViewSource x:Key="SortedFontsCollection" Source="{Binding Source={x:Static Fonts.SystemFontFamilies}}" >
             <CollectionViewSource.SortDescriptions>
@@ -16,7 +16,9 @@
             </CollectionViewSource.SortDescriptions>
         </CollectionViewSource>
     </UserControl.Resources>
-    <StackPanel Width="150" Height="150">
+    <StackPanel Width="150" Height="250">
+        <Label Content="Text"></Label>
+        <TextBox Text="{Binding Text}"></TextBox>
         <Label Content="Font Family"></Label>
         <ComboBox x:Name="comboBoxFonts" SelectedValue="{Binding FontFamily}" ItemsSource="{Binding Source={StaticResource SortedFontsCollection}}" />
         <Label Content="Font Size"></Label>
