--- a/WPF/MainWindow.xaml
+++ b/WPF/MainWindow.xaml
@@ -24,7 +24,7 @@
                         <MenuItem Header="_Import" Command="{Binding Path=ImportImageCommand}" />
                         <MenuItem Header="_Save" Command="{Binding Path=SaveCommand}" />
                         <Separator />
-                        <MenuItem Header="_Exit" />
+                        <MenuItem Header="_Exit" Click="MenuItem_Exit" />
                     </MenuItem>
                 </Menu>
             </DockPanel>
